--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "npm run build && scp -r ./build/* praktikum@51.250.29.129:/home/praktikum/react-mesto-api-full/frontend",
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
